--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+
     <title>Lamontagne</title>
 </head>
 
 <body>
 
     <header>
-        <h1>La montagne ça vous gagne</h1>
-
-        <div>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, ducimus?</P>
-            <div>
-                <i class="fa-solid fa-arrow-down"></i>
+        <div class="header-title">
+            <h1>La montagne ça vous gagne</h1>
+            <div class="par-icone">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
+                <div>
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
             </div>
         </div>
 
