--- a/index.html
+++ b/index.html
@@ -1,152 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
 
     <title>Lamontagne</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <div class="header-title">
-            <h1>La montagne ça vous gagne</h1>
-            <div class="par-icone">
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
-                <div>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-            </div>
+      <div class="header-title">
+        <h1>La montagne ça vous gagne</h1>
+        <div class="part-icone">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+            ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <div class="icone">
+            <i class="fa-solid fa-arrow-down"></i>
+          </div>
         </div>
+      </div>
 
-        <nav>
-            <ul>
-                <li>this is massively</li>
-                <li>generic page</li>
-                <li>element reference</li>
-            </ul>
+      <nav>
+        <div class="nav">
+          <ul>
+            <li><a href="">this is massively</a></li>
+            <li><a href="">generic page</a></li>
+            <li><a href="">element reference</a></li>
+          </ul>
 
-
-            <div>
-                <div class="reseau">
-                    <i class="fa-brands fa-x-twitter"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-github"></i>
-                </div>
+          
+            <div class="reseau">
+              <i class="fa-brands fa-x-twitter"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-github"></i>
             </div>
-        </nav>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section>
+      <section>
+        <div>
+          <p>april 25,2023</p>
+        </div>
+        <h2>and this is a massive headline</h2>
 
-            <div>
-                <p>april 25,2023</p>
-            </div>
-            <h2>and this is a massive headline</h2>
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
+          ab nobis. Alias vel laboriosam nemo quas quibusdam rem.
+        </div>
 
-            <div>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, ab nobis. Alias vel laboriosam
-                nemo quas quibusdam rem.
-            </div>
+        <div>
+          <img src="./assets/images/pic01.jpg" alt="" />
+          <button>full story</button>
+        </div>
+      </section>
+      <section>
+        <div>
+          <div>
+            <p>April 24.2023</p>
+          </div>
+          <h3>sed magna ipsum faucibus</h3>
 
-            <div>
-                <img src="./assets/images/pic01.jpg" alt="">
-                <button>full story</button>
-            </div>
-        </section>
-        <section>
-            <div>
+          <img src="./assets/images/pic02.jpg" alt="" />
 
-                <div>
-                    <p>April 24.2023</p>
-                </div>
-                <h3>sed magna ipsum faucibus</h3>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
+              veniam voluptates id! Quaerat quis, excepturi cum adipisci
+              impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
+            </p>
+          </div>
 
-                <img src="./assets/images/pic02.jpg" alt="">
+          <button>full story</button>
+        </div>
 
+        <div>
+          <div>
+            <p>April 24.2023</p>
+          </div>
+          <h3>sed magna ipsum faucibus</h3>
 
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro veniam voluptates id! Quaerat
-                        quis, excepturi cum adipisci impedit, vero culpa, iste voluptatum rem accusamus animi saepe.</p>
-                </div>
+          <img src="./assets/images/pic03.jpg" alt="" />
 
-                <button>full story</button>
-            </div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
+              veniam voluptates id! Quaerat quis, excepturi cum adipisci
+              impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
+            </p>
+          </div>
 
-            <div>
-
-                <div>
-                    <p>April 24.2023</p>
-                </div>
-                <h3>sed magna ipsum faucibus</h3>
-
-                <img src="./assets/images/pic03.jpg" alt="">
-
-
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro veniam voluptates id! Quaerat
-                        quis, excepturi
-                        cum adipisci impedit, vero culpa, iste voluptatum rem accusamus animi saepe.</p>
-                </div>
-
-                <button>full story</button>
-            </div>
-        </section>
+          <button>full story</button>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <form action="#">
-            <div>
-                <label for="text">name</label>
-                <input type="text">
-                <label for="email">email</label>
-                <input type="email">
-                <label for="texarea">messages</label>
-                <input type="button" value="send message">
-            </div>
+      <form action="#">
+        <div>
+          <label for="text">name</label>
+          <input type="text" />
+          <label for="email">email</label>
+          <input type="email" />
+          <label for="texarea">messages</label>
+          <input type="button" value="send message" />
+        </div>
 
-            <div>
-                <div>
-                    <p>address</p>
-                    <address>
-                        <p>istanbul , adnakaveci, karan 7895</p>
-                    </address>
-                </div>
-                <div>
-                    <p>phone</p>
-                    <address>
-                        <p>
-                            (0000)0000-000
-                        </p>
-                    </address>
-                </div>
-                <div>
-                    <p>email</p>
-                    <address>
-                        <p>info@.com</p>
-                    </address>
-                </div>
+        <div>
+          <div>
+            <p>address</p>
+            <address>
+              <p>istanbul , adnakaveci, karan 7895</p>
+            </address>
+          </div>
+          <div>
+            <p>phone</p>
+            <address>
+              <p>(0000)0000-000</p>
+            </address>
+          </div>
+          <div>
+            <p>email</p>
+            <address>
+              <p>info@.com</p>
+            </address>
+          </div>
 
-                <div>
-                    <p>social</p>
-                    <address>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-github"></i>
-
-                    </address>
-                </div>
-            </div>
-        </form>
+          <div>
+            <p>social</p>
+            <address>
+              <i class="fa-brands fa-x-twitter"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-github"></i>
+            </address>
+          </div>
+        </div>
+      </form>
     </footer>
-
-</body>
-
+  </body>
 </html>
