style-part-header-nav

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="first-sect">
         <div>
           <p>april 25,2023</p>
         </div>
