--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
 
     <main>
       <section class="first-sect">
-        <div>
+        <div class="date">
           <p>april 25,2023</p>
         </div>
         <h2>and this is a massive headline</h2>
 
-        <div>
+        <div class="massive-p">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
           ab nobis. Alias vel laboriosam nemo quas quibusdam rem.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos consectetur maxime veniam accusamus mole
         </div>
 
         <div>
