--- a/index.html
+++ b/index.html
@@ -60,60 +60,63 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos consectetur maxime veniam accusamus mole
         </div>
 
-        <div>
+        <div class="massive-picture">
           <img src="./assets/images/pic01.jpg" alt="" />
-          <button>full story</button>
+          <div class="massive-button">
+            <button>full story</button>
+          </div>
         </div>
       </section>
-      <section>
-        <div>
-          <div>
+      <section class="seconde-sect">
+        <div class="left-part">
+          <div class="date">
             <p>April 24.2023</p>
           </div>
           <h3>sed magna ipsum faucibus</h3>
-
           <img src="./assets/images/pic02.jpg" alt="" />
 
-          <div>
+          <div class="Magna-p">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
               veniam voluptates id! Quaerat quis, excepturi cum adipisci
               impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
             </p>
           </div>
-
-          <button>full story</button>
+           <div class="Magna-button">
+             <button>full story</button>
+           </div>
         </div>
 
-        <div>
-          <div>
+        <div class="right-part">
+          <div class="date">
             <p>April 24.2023</p>
           </div>
           <h3>sed magna ipsum faucibus</h3>
-
           <img src="./assets/images/pic03.jpg" alt="" />
 
-          <div>
+          <div class="Magna-p">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
               veniam voluptates id! Quaerat quis, excepturi cum adipisci
               impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
             </p>
           </div>
-
-          <button>full story</button>
+          <div class="Magna-button">
+            <button>full story</button>
+          </div>
         </div>
       </section>
     </main>
 
     <footer>
       <form action="#">
-        <div>
+        <div class="form-part">
           <label for="text">name</label>
           <input type="text" />
           <label for="email">email</label>
           <input type="email" />
-          <label for="texarea">messages</label>
+          <label for="texarea" >messages</label>
+          <textarea rows="30" cols=""></textarea>
           <input type="button" value="send message" />
         </div>
 
