--- a/index.html
+++ b/index.html
@@ -110,44 +110,65 @@
 
     <footer>
       <form action="#">
-        <div class="form-part">
+        <div class="form-right">
           <label for="text">name</label>
           <input type="text" />
           <label for="email">email</label>
           <input type="email" />
           <label for="texarea" >messages</label>
-          <textarea rows="30" cols=""></textarea>
+          <textarea rows="35" cols=""></textarea>
           <input type="button" value="send message" />
         </div>
 
-        <div>
-          <div>
-            <p>address</p>
-            <address>
-              <p>istanbul , adnakaveci, karan 7895</p>
-            </address>
-          </div>
-          <div>
-            <p>phone</p>
-            <address>
-              <p>(0000)0000-000</p>
-            </address>
-          </div>
-          <div>
-            <p>email</p>
-            <address>
-              <p>info@.com</p>
-            </address>
-          </div>
+        <div class="form-left">
+          <div class="rows">
+            <div class="column">
+              <div class="column-left">
+                <p>address</p>
+              </div>
+              <div class="column-right">
+                <p>somewhere dashville road1920</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="column-left">
+                <p>phone</p>
+              </div>
+              <div class="column-right">
+              <p>(000)000-000</p>
+              </div>
+            </div>
 
-          <div>
-            <p>social</p>
-            <address>
-              <i class="fa-brands fa-x-twitter"></i>
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-github"></i>
-            </address>
+            <div class="column">
+              <div class="column-left">
+                <p>email</p>
+              </div>
+              <div class="column-right">
+                <p>info@gmail.com</p>
+              </div>
+            </div>
+            
+            <div class="column">
+              <div class="column-left">
+                <p>social</p>
+              </div>
+              <div class="column-right">
+                <div class="reseau-last">
+                  <span>
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </span>
+                  <span>
+                    <i class="fa-brands fa-facebook"></i>
+                  </span>
+                  <span>
+                    <i class="fa-brands fa-instagram"></i>
+                  </span>
+                  <span>
+                    <i class="fa-brands fa-github"></i>
+                  </span>
+                </div>
+                </div>
+            </div>
           </div>
         </div>
       </form>
