--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
             ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </p>
-          <div class="icone">
+          <div class="icone" >
+            <a href="#smooth">
             <i class="fa-solid fa-arrow-down"></i>
+          </a>
           </div>
         </div>
       </div>
@@ -67,7 +69,7 @@
           </div>
         </div>
       </section>
-      <section class="seconde-sect">
+      <section class="seconde-sect " id="smooth">
         <div class="left-part">
           <div class="date">
             <p>April 24.2023</p>
