--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
         <h2>and this is a massive headline</h2>
 
         <div class="massive-p">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores,
-          ab nobis. Alias vel laboriosam nemo quas quibusdam rem.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos consectetur maxime veniam accusamus mole
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat eveniet ullam odit quasi aliquam iste tempore illo dolores repellat adipisci? Quis sint eveniet, commodi temporibus corrupti doloremque recusandae esse molestiae suscipit, earum maiores similique aperiam consequatur architecto eligendi neque?</p>
         </div>
 
         <div class="massive-picture">
@@ -79,9 +77,8 @@
 
           <div class="Magna-p">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
-              veniam voluptates id! Quaerat quis, excepturi cum adipisci
-              impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet eius repellendus quo praesentium tenetur tempore minus, et numquam vel sequi suscipit vero quod dolores nihil nam modi in, accusamus, cum pariatur? Amet impedit praesentium vitae aperiam quia placeat excepturi?
+        
             </p>
           </div>
            <div class="Magna-button">
@@ -98,9 +95,7 @@
 
           <div class="Magna-p">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
-              veniam voluptates id! Quaerat quis, excepturi cum adipisci
-              impedit, vero culpa, iste voluptatum rem accusamus animi saepe.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet eius repellendus quo praesentium tenetur tempore minus, et numquam vel sequi suscipit vero quod dolores nihil nam modi in, accusamus, cum pariatur? Amet impedit praesentium vitae aperiam quia placeat excepturi?
             </p>
           </div>
           <div class="Magna-button">
